Hero home: avoid layout shift on form

--- a/src/components/Global/HeroHome/index.scss
+++ b/src/components/Global/HeroHome/index.scss
@@ -249,7 +249,7 @@
   }
 
   .box-form {
-    min-height: 100px
+    min-height: 119px
   }
 }
 
